--- a/_includes/about.html
+++ b/_includes/about.html
@@ -98,6 +98,8 @@
        <div class="comment">
          {% include comments.html %}
        </div>
+
+        <div>test</div>
     </div>
 
 </div>
